Bison/miniC.output
Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: "void" "id" "(" ")" "{" $@1 declarations statement_list "}"

    3 $@2: %empty

    4 declarations: declarations "var" $@2 identifier_list ";"

    5 $@3: %empty

    6 declarations: declarations "const" $@3 identifier_list ";"
    7             | %empty

    8 identifier_list: asig
    9                | identifier_list "," asig

   10 asig: "id"
   11     | "id" "=" expression

   12 statement_list: statement_list statement
   13               | %empty

   14 statement: "id" "=" expression ";"
   15          | "{" statement_list "}"
   16          | "if" "(" expression ")" statement "else" statement
   17          | "if" "(" expression ")" statement
   18          | "while" "(" expression ")" statement
   19          | "print" print_list ";"
   20          | "read" read_list ";"
   21          | "do" statement "while" "(" expression ")"
   22          | "for" "(" expression ")" statement

   23 print_list: print_item
   24           | print_list "," print_item

   25 print_item: expression
   26           | "string"

   27 read_list: "id"
   28          | read_list "," "id"

   29 expression: expression "+" expression
   30           | expression "-" expression
   31           | expression "*" expression
   32           | expression "/" expression
   33           | "-" expression
   34           | "(" expression ")"
   35           | "id"
   36           | "num"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    "+" (258) 29
    "-" (259) 30 33
    "*" (260) 31
    "/" (261) 32
    "(" (262) 2 16 17 18 21 22 34
    ")" (263) 2 16 17 18 21 22 34
    "{" (264) 2 15
    "}" (265) 2 15
    "," (266) 9 24 28
    ";" (267) 4 6 14 19 20
    "=" (268) 11 14
    "id" <cadena> (269) 2 10 11 14 27 28 35
    "num" <cadena> (270) 36
    "string" <cadena> (271) 26
    "if" (272) 16 17
    "else" (273) 16
    "while" (274) 18 21
    "print" (275) 19
    "read" (276) 20
    "const" (277) 6
    "var" (278) 4
    "void" (279) 2
    "do" (280) 21
    "for" (281) 22
    UMINUS (282)
    ELSE1 (283)


No terminales con las reglas donde aparecen

    $accept (29)
        on left: 0
    program (30)
        on left: 2
        on right: 0
    $@1 (31)
        on left: 1
        on right: 2
    declarations <codigo> (32)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (33)
        on left: 3
        on right: 4
    $@3 (34)
        on left: 5
        on right: 6
    identifier_list <codigo> (35)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (36)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (37)
        on left: 12 13
        on right: 2 12 15
    statement <codigo> (38)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 12 16 17 18 21 22
    print_list <codigo> (39)
        on left: 23 24
        on right: 19 24
    print_item <codigo> (40)
        on left: 25 26
        on right: 23 24
    read_list <codigo> (41)
        on left: 27 28
        on right: 20 28
    expression <codigo> (42)
        on left: 29 30 31 32 33 34 35 36
        on right: 11 14 16 17 18 21 22 25 29 30 31 32 33 34


Estado 0

    0 $accept: . program $end

    "void"  desplazar e ir al estado 1

    program  ir al estado 2


Estado 1

    2 program: "void" . "id" "(" ")" "{" $@1 declarations statement_list "}"

    "id"  desplazar e ir al estado 3


Estado 2

    0 $accept: program . $end

    $end  desplazar e ir al estado 4


Estado 3

    2 program: "void" "id" . "(" ")" "{" $@1 declarations statement_list "}"

    "("  desplazar e ir al estado 5


Estado 4

    0 $accept: program $end .

    $default  aceptar


Estado 5

    2 program: "void" "id" "(" . ")" "{" $@1 declarations statement_list "}"

    ")"  desplazar e ir al estado 6


Estado 6

    2 program: "void" "id" "(" ")" . "{" $@1 declarations statement_list "}"

    "{"  desplazar e ir al estado 7


Estado 7

    2 program: "void" "id" "(" ")" "{" . $@1 declarations statement_list "}"

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 8


Estado 8

    2 program: "void" "id" "(" ")" "{" $@1 . declarations statement_list "}"

    $default  reduce usando la regla 7 (declarations)

    declarations  ir al estado 9


Estado 9

    2 program: "void" "id" "(" ")" "{" $@1 declarations . statement_list "}"
    4 declarations: declarations . "var" $@2 identifier_list ";"
    6             | declarations . "const" $@3 identifier_list ";"

    "const"  desplazar e ir al estado 10
    "var"    desplazar e ir al estado 11

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 12


Estado 10

    6 declarations: declarations "const" . $@3 identifier_list ";"

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 13


Estado 11

    4 declarations: declarations "var" . $@2 identifier_list ";"

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 14


Estado 12

    2 program: "void" "id" "(" ")" "{" $@1 declarations statement_list . "}"
   12 statement_list: statement_list . statement

    "{"      desplazar e ir al estado 15
    "}"      desplazar e ir al estado 16
    "id"     desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 24


Estado 13

    6 declarations: declarations "const" $@3 . identifier_list ";"

    "id"  desplazar e ir al estado 25

    identifier_list  ir al estado 26
    asig             ir al estado 27


Estado 14

    4 declarations: declarations "var" $@2 . identifier_list ";"

    "id"  desplazar e ir al estado 25

    identifier_list  ir al estado 28
    asig             ir al estado 27


Estado 15

   15 statement: "{" . statement_list "}"

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 29


Estado 16

    2 program: "void" "id" "(" ")" "{" $@1 declarations statement_list "}" .

    $default  reduce usando la regla 2 (program)


Estado 17

   14 statement: "id" . "=" expression ";"

    "="  desplazar e ir al estado 30


Estado 18

   16 statement: "if" . "(" expression ")" statement "else" statement
   17          | "if" . "(" expression ")" statement

    "("  desplazar e ir al estado 31


Estado 19

   18 statement: "while" . "(" expression ")" statement

    "("  desplazar e ir al estado 32


Estado 20

   19 statement: "print" . print_list ";"

    "-"       desplazar e ir al estado 33
    "("       desplazar e ir al estado 34
    "id"      desplazar e ir al estado 35
    "num"     desplazar e ir al estado 36
    "string"  desplazar e ir al estado 37

    print_list  ir al estado 38
    print_item  ir al estado 39
    expression  ir al estado 40


Estado 21

   20 statement: "read" . read_list ";"

    "id"  desplazar e ir al estado 41

    read_list  ir al estado 42


Estado 22

   21 statement: "do" . statement "while" "(" expression ")"

    "{"      desplazar e ir al estado 15
    "id"     desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 43


Estado 23

   22 statement: "for" . "(" expression ")" statement

    "("  desplazar e ir al estado 44


Estado 24

   12 statement_list: statement_list statement .

    $default  reduce usando la regla 12 (statement_list)


Estado 25

   10 asig: "id" .
   11     | "id" . "=" expression

    "="  desplazar e ir al estado 45

    $default  reduce usando la regla 10 (asig)


Estado 26

    6 declarations: declarations "const" $@3 identifier_list . ";"
    9 identifier_list: identifier_list . "," asig

    ","  desplazar e ir al estado 46
    ";"  desplazar e ir al estado 47


Estado 27

    8 identifier_list: asig .

    $default  reduce usando la regla 8 (identifier_list)


Estado 28

    4 declarations: declarations "var" $@2 identifier_list . ";"
    9 identifier_list: identifier_list . "," asig

    ","  desplazar e ir al estado 46
    ";"  desplazar e ir al estado 48


Estado 29

   12 statement_list: statement_list . statement
   15 statement: "{" statement_list . "}"

    "{"      desplazar e ir al estado 15
    "}"      desplazar e ir al estado 49
    "id"     desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 24


Estado 30

   14 statement: "id" "=" . expression ";"

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 50


Estado 31

   16 statement: "if" "(" . expression ")" statement "else" statement
   17          | "if" "(" . expression ")" statement

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 51


Estado 32

   18 statement: "while" "(" . expression ")" statement

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 52


Estado 33

   33 expression: "-" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 53


Estado 34

   34 expression: "(" . expression ")"

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 54


Estado 35

   35 expression: "id" .

    $default  reduce usando la regla 35 (expression)


Estado 36

   36 expression: "num" .

    $default  reduce usando la regla 36 (expression)


Estado 37

   26 print_item: "string" .

    $default  reduce usando la regla 26 (print_item)


Estado 38

   19 statement: "print" print_list . ";"
   24 print_list: print_list . "," print_item

    ","  desplazar e ir al estado 55
    ";"  desplazar e ir al estado 56


Estado 39

   23 print_list: print_item .

    $default  reduce usando la regla 23 (print_list)


Estado 40

   25 print_item: expression .
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 25 (print_item)


Estado 41

   27 read_list: "id" .

    $default  reduce usando la regla 27 (read_list)


Estado 42

   20 statement: "read" read_list . ";"
   28 read_list: read_list . "," "id"

    ","  desplazar e ir al estado 61
    ";"  desplazar e ir al estado 62


Estado 43

   21 statement: "do" statement . "while" "(" expression ")"

    "while"  desplazar e ir al estado 63


Estado 44

   22 statement: "for" "(" . expression ")" statement

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 64


Estado 45

   11 asig: "id" "=" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 65


Estado 46

    9 identifier_list: identifier_list "," . asig

    "id"  desplazar e ir al estado 25

    asig  ir al estado 66


Estado 47

    6 declarations: declarations "const" $@3 identifier_list ";" .

    $default  reduce usando la regla 6 (declarations)


Estado 48

    4 declarations: declarations "var" $@2 identifier_list ";" .

    $default  reduce usando la regla 4 (declarations)


Estado 49

   15 statement: "{" statement_list "}" .

    $default  reduce usando la regla 15 (statement)


Estado 50

   14 statement: "id" "=" expression . ";"
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60
    ";"  desplazar e ir al estado 67


Estado 51

   16 statement: "if" "(" expression . ")" statement "else" statement
   17          | "if" "(" expression . ")" statement
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60
    ")"  desplazar e ir al estado 68


Estado 52

   18 statement: "while" "(" expression . ")" statement
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60
    ")"  desplazar e ir al estado 69


Estado 53

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression
   33           | "-" expression .

    $default  reduce usando la regla 33 (expression)


Estado 54

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression
   34           | "(" expression . ")"

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60
    ")"  desplazar e ir al estado 70


Estado 55

   24 print_list: print_list "," . print_item

    "-"       desplazar e ir al estado 33
    "("       desplazar e ir al estado 34
    "id"      desplazar e ir al estado 35
    "num"     desplazar e ir al estado 36
    "string"  desplazar e ir al estado 37

    print_item  ir al estado 71
    expression  ir al estado 40


Estado 56

   19 statement: "print" print_list ";" .

    $default  reduce usando la regla 19 (statement)


Estado 57

   29 expression: expression "+" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 72


Estado 58

   30 expression: expression "-" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 73


Estado 59

   31 expression: expression "*" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 74


Estado 60

   32 expression: expression "/" . expression

    "-"    desplazar e ir al estado 33
    "("    desplazar e ir al estado 34
    "id"   desplazar e ir al estado 35
    "num"  desplazar e ir al estado 36

    expression  ir al estado 75


Estado 61

   28 read_list: read_list "," . "id"

    "id"  desplazar e ir al estado 76


Estado 62

   20 statement: "read" read_list ";" .

    $default  reduce usando la regla 20 (statement)


Estado 63

   21 statement: "do" statement "while" . "(" expression ")"

    "("  desplazar e ir al estado 77


Estado 64

   22 statement: "for" "(" expression . ")" statement
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60
    ")"  desplazar e ir al estado 78


Estado 65

   11 asig: "id" "=" expression .
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 11 (asig)


Estado 66

    9 identifier_list: identifier_list "," asig .

    $default  reduce usando la regla 9 (identifier_list)


Estado 67

   14 statement: "id" "=" expression ";" .

    $default  reduce usando la regla 14 (statement)


Estado 68

   16 statement: "if" "(" expression ")" . statement "else" statement
   17          | "if" "(" expression ")" . statement

    "{"      desplazar e ir al estado 15
    "id"     desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 79


Estado 69

   18 statement: "while" "(" expression ")" . statement

    "{"      desplazar e ir al estado 15
    "id"     desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 80


Estado 70

   34 expression: "(" expression ")" .

    $default  reduce usando la regla 34 (expression)


Estado 71

   24 print_list: print_list "," print_item .
